# Conformity

./: DOCUMENTATION.md  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/conformity/: __init__.py  base.py  classifier.py  metrics.py  regression.py  regressor.py
tests/: test_conformal_classifier.py  test_conformal_regressor.py  test_integration.py  test_metrics.py  test_sklearn_compatibility.py
