[project]
name = "conformity"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Jack", email = "jackg18@hotmail.co.uk" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.4",
    "scikit-learn>=1.6.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.11.2",
]
